--- a/make.tex
+++ b/make.tex
@@ -23,10 +23,10 @@
 \usepackage{verbatim}
 \usepackage{subfig}
 \usepackage{graphicx}
-%\usepackage{textcomp} % To obtain straight single (') and double (") quotes (instead of curly ones); use \textquotesingle and \textquotedbl
+\usepackage{textcomp} % To obtain straight single (') and double (") quotes (instead of curly ones); use \textquotesingle and \textquotedbl
 % Note however that \textquotedbl comes from the fontenc package
-%\usepackage{listings} % For displaying source code; for example use \begin{lstlisting}[language=tex]code here\end{lstlisting} to show LaTeX code
-%\lstset{upquote=true} % Don't make quotes curly when displaying code using the listings package
+\usepackage{listings} % For displaying source code; for example use \begin{lstlisting}[language=tex]code here\end{lstlisting} to show LaTeX code
+\lstset{upquote=true} % Don't make quotes curly when displaying code using the listings package
 %\usepackage[tone]{tipa} % For the International Phonetic Alphabet. Type \textipa{text} to typeset
 %\usepackage{tikz}
 %\usetikzlibrary{decorations.markings}
@@ -57,27 +57,31 @@
 \newcommand{\AND}{\ensuremath{\wedge}}
 \newcommand{\OR}{\ensuremath{\vee}}
 \newcommand{\CHESS}{\emph{CHESS}}
-\newcommand{\derive}[2]{\ensuremath{\{#1\}\vdash #2}}
+\newcommand{\derive}[2]{\ensuremath{#1\vdash #2}}
 %%%%%%%%%%%%%%%%%%%% For maths
 \theoremstyle{definition}
 \newtheorem{ax}{Axiom}[section]
 \newtheorem{cor}{Corollary}[section]
 \newtheorem{defn}{Definition}[section]
+\newtheorem*{di}{Discussion}
 \newtheorem{ex}{Example}[section]
-\newtheorem{exercise}{Exercise}[subsection]
+\newtheorem{exer}{Exercise}[subsection]
 \newtheorem{lemma}{Lemma}[section]
 \newtheorem*{note}{Note}
 \newtheorem{prop}{Proposition}[section]
-\newtheorem{remark}{Remark}[section]
+\newtheorem*{remark}{Remark}[section]
+\newtheorem{thm}{Theorem}[subsection]
 \crefname{ax}{axiom}{axioms}
 \crefname{cor}{corollary}{corollaries}
 \crefname{defn}{definition}{definitions}
+\crefname{di}{discussion}{discussions}
 \crefname{ex}{example}{examples}
-\crefname{exercise}{exercise}{exercises}
+\crefname{exer}{exercise}{exercises}
 \crefname{lemma}{lemma}{lemmas}
 \crefname{note}{note}{notes}
 \crefname{prop}{propositions}{propositions}
 \crefname{remark}{remark}{remarks}
+\crefname{thm}{theorem}{theorems}
 %%%%%%%%%%%%%%%%%%%% Other options
 %\doublespacing % Use with the ``setspace'' package
 %\onehalfspacing % Use with the ``setspace'' package
